[gd_scene load_steps=13 format=3 uid="uid://cj0vrmwtckgxq"]

[ext_resource type="Script" uid="uid://dvvh451ig8m1l" path="res://scripts/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://b83nfsoi8bk8s" path="res://scenes/pool_ball.tscn" id="2_jyhfs"]
[ext_resource type="PackedScene" uid="uid://m7usbwj7n40d" path="res://scenes/pool.tscn" id="3_tbgi4"]
[ext_resource type="PackedScene" uid="uid://80w516a6krsm" path="res://scenes/cue.tscn" id="5_tbgi4"]
[ext_resource type="Script" uid="uid://cbmwditbbfy7c" path="res://scripts/power_bar.gd" id="6_tefeu"]
[ext_resource type="PackedScene" uid="uid://v7afn15fn451" path="res://scenes/potted_balls_display.tscn" id="7_o6xl0"]
[ext_resource type="Script" uid="uid://d03wme6lgy6ye" path="res://scripts/scoreboard.gd" id="8_tipki"]
[ext_resource type="Script" uid="uid://ds6wjc8bqdjpw" path="res://scripts/background.gd" id="9_85g3d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o6xl0"]
bg_color = Color(1, 1, 1, 0.45882353)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tipki"]
bg_color = Color(0.972549, 0.1882353, 0.047058824, 1)

[sub_resource type="LabelSettings" id="LabelSettings_o6xl0"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_tipki"]
font_size = 24

[node name="Node" type="Node"]

[node name="GameViewport" type="SubViewportContainer" parent="."]
offset_right = 1500.0
offset_bottom = 750.0
size_flags_horizontal = 3
size_flags_vertical = 0
metadata/_edit_group_ = true

[node name="SubViewport" type="SubViewport" parent="GameViewport"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1500, 750)
render_target_update_mode = 4

[node name="Main" type="Node" parent="GameViewport/SubViewport"]
script = ExtResource("1_sugp2")
ball_scene = ExtResource("2_jyhfs")

[node name="Table" parent="GameViewport/SubViewport/Main" instance=ExtResource("3_tbgi4")]

[node name="Cue" parent="GameViewport/SubViewport/Main" instance=ExtResource("5_tbgi4")]
z_index = 2

[node name="Power_bar" type="ProgressBar" parent="GameViewport/SubViewport/Main"]
z_index = 1
offset_left = 120.0
offset_top = 88.0
offset_right = 270.0
offset_bottom = 108.0
theme_override_styles/background = SubResource("StyleBoxFlat_o6xl0")
theme_override_styles/fill = SubResource("StyleBoxFlat_tipki")
show_percentage = false
script = ExtResource("6_tefeu")

[node name="Scoreboard" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(15, 15)
offset_left = 10.0
offset_top = 760.0
offset_right = 330.0
offset_bottom = 973.0
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="Scoreboard"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Scoreboard/MarginContainer"]
layout_mode = 2
script = ExtResource("8_tipki")

[node name="Aplayer1" type="HBoxContainer" parent="Scoreboard/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Scoreboard/MarginContainer/VBoxContainer/Aplayer1"]
layout_mode = 2

[node name="Avatar" type="TextureRect" parent="Scoreboard/MarginContainer/VBoxContainer/Aplayer1/MarginContainer" groups=["avatars"]]
layout_mode = 2
size_flags_horizontal = 0
expand_mode = 3
stretch_mode = 5

[node name="Name" type="Label" parent="Scoreboard/MarginContainer/VBoxContainer/Aplayer1" groups=["name_labels"]]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 19
label_settings = SubResource("LabelSettings_o6xl0")

[node name="Score" type="Label" parent="Scoreboard/MarginContainer/VBoxContainer/Aplayer1" groups=["score_labels"]]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 19
label_settings = SubResource("LabelSettings_tipki")

[node name="Aplayer2" type="HBoxContainer" parent="Scoreboard/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Avatar" type="TextureRect" parent="Scoreboard/MarginContainer/VBoxContainer/Aplayer2" groups=["avatars"]]
layout_mode = 2
size_flags_horizontal = 0
expand_mode = 3
stretch_mode = 5

[node name="Name" type="Label" parent="Scoreboard/MarginContainer/VBoxContainer/Aplayer2" groups=["name_labels"]]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 19
label_settings = SubResource("LabelSettings_tipki")

[node name="Score" type="Label" parent="Scoreboard/MarginContainer/VBoxContainer/Aplayer2" groups=["score_labels"]]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 19
label_settings = SubResource("LabelSettings_tipki")

[node name="Score" type="HBoxContainer" parent="Scoreboard/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Score" type="Label" parent="Scoreboard/MarginContainer/VBoxContainer/Score"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 19
label_settings = SubResource("LabelSettings_tipki")

[node name="Bplayer1" type="HBoxContainer" parent="Scoreboard/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Avatar" type="TextureRect" parent="Scoreboard/MarginContainer/VBoxContainer/Bplayer1" groups=["avatars"]]
layout_mode = 2
size_flags_horizontal = 0
expand_mode = 3
stretch_mode = 5

[node name="Name" type="Label" parent="Scoreboard/MarginContainer/VBoxContainer/Bplayer1" groups=["name_labels"]]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 19
label_settings = SubResource("LabelSettings_tipki")

[node name="Score" type="Label" parent="Scoreboard/MarginContainer/VBoxContainer/Bplayer1" groups=["score_labels"]]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 19
label_settings = SubResource("LabelSettings_tipki")

[node name="Bplayer2" type="HBoxContainer" parent="Scoreboard/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Avatar" type="TextureRect" parent="Scoreboard/MarginContainer/VBoxContainer/Bplayer2" groups=["avatars"]]
layout_mode = 2
size_flags_horizontal = 0
expand_mode = 3
stretch_mode = 5

[node name="Name" type="Label" parent="Scoreboard/MarginContainer/VBoxContainer/Bplayer2" groups=["name_labels"]]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 19
label_settings = SubResource("LabelSettings_tipki")

[node name="Score" type="Label" parent="Scoreboard/MarginContainer/VBoxContainer/Bplayer2" groups=["score_labels"]]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 19
label_settings = SubResource("LabelSettings_tipki")

[node name="Potted_balls_display" parent="." instance=ExtResource("7_o6xl0")]
offset_left = 344.0
offset_top = 760.0
offset_right = 1068.0
offset_bottom = 1036.0
scale = Vector2(0.85, 0.85)

[node name="Background" type="TextureRect" parent="."]
z_index = -1
offset_right = 1500.0
offset_bottom = 1000.0
script = ExtResource("9_85g3d")
metadata/_edit_lock_ = true

[connection signal="ball_dropped" from="GameViewport/SubViewport/Main/Table" to="Potted_balls_display" method="_on_table_ball_dropped"]
[connection signal="cue_ball_potted" from="GameViewport/SubViewport/Main/Table" to="GameViewport/SubViewport/Main" method="reset_cue_ball"]
[connection signal="update_scoreboard" from="GameViewport/SubViewport/Main/Table" to="Scoreboard/MarginContainer/VBoxContainer" method="_update_scoreboard"]
[connection signal="shoot" from="GameViewport/SubViewport/Main/Cue" to="GameViewport/SubViewport/Main" method="_on_cue_shoot"]
